<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadGasto">

    <TextView
        android:id="@+id/textView_titCadGasto"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/TitCadGastos"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        tools:text="Cadastro de Gastos" />

    <EditText
        android:id="@+id/cadAlunoTxtData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/data"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/textView_titCadGasto"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/textView_titCadGasto"
        app:layout_constraintTop_toBottomOf="@+id/textView_titCadGasto" />

    <EditText
        android:id="@+id/cadAlunoTxtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/cadAlunoTxtData"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cadAlunoTxtData"
        app:layout_constraintTop_toBottomOf="@+id/cadAlunoTxtData" />

    <EditText
        android:id="@+id/cadAlunoTxtCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/categoria"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/cadAlunoTxtDescricao"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cadAlunoTxtDescricao"
        app:layout_constraintTop_toBottomOf="@+id/cadAlunoTxtDescricao" />

    <EditText
        android:id="@+id/cadAlunoTxtValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/cadAlunoTxtCategoria"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cadAlunoTxtCategoria"
        app:layout_constraintTop_toBottomOf="@+id/cadAlunoTxtCategoria" />

    <Button
        android:id="@+id/btnCad_Enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:text="Enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cadAlunoTxtValor"
        app:layout_constraintStart_toStartOf="@+id/cadAlunoTxtValor" />

</android.support.constraint.ConstraintLayout>